<resources>
    <string name="app_name">Stock Simulation</string>
    <string name="watch_list">Watch List</string>
    <string name="history">History</string>
    <string name="total_return">Total Return</string>
    <string name="equity">Equity</string>
    <string name="today_s_return">Today\'s Return</string>
    <string name="quantity">Quantity</string>
    <string name="your_position">Your Position</string>
    <string name="trade">Trade</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="portfolio">Portfolio</string>
    <string name="settings">Settings</string>
    <string name="symbol_key">symbol_key</string>
    <string name="price_key">price_key</string>
    <string name="failed_fetch">Failed to fetch stock data!</string>
    <string name="shares_below_0"><![CDATA[Shares must be > 0!]]></string>
    <string name="wait_for_data">Wait for data to load!</string>
    <string name="search_failed_fetch">Failed to fetch stock data! Did you search the correct symbol?</string>
    <string name="add_funds_too_small">Amount to small!</string>
    <string name="added_funds">Successfully added funds!</string>
    <string name="simulation_reset">Simulation Reset!</string>
    <string name="not_enough_money">Not enough money!</string>
    <string name="not_enough_shares">You don\'t own enough shares!</string>
</resources>